tests/baselines/reference/parser512097.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512097.ts(1,12): error TS2304: Cannot find name 'aa'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512097.ts(1,14): error TS1005: ',' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser512097.ts (2 errors) ====
    var tt = { aa; }
               ~~
!!! error TS2304: Cannot find name 'aa'.
                 ~
!!! error TS1005: ',' expected.
    
    if (true) {
    }